# php-amqp

./: .appveyor.yml  .clang-format  .env  .gitignore  .travis.yml  CMakeLists.txt  CREDITS  DEVELOPMENT.md  LICENSE  README.md  TODO  UPGRADING.md  Vagrantfile  amqp.c  amqp_basic_properties.c  amqp_basic_properties.h  amqp_channel.c  amqp_channel.h  amqp_connection.c  amqp_connection.h  amqp_connection_resource.c  amqp_connection_resource.h  amqp_consumer.c  amqp_consumer.h  amqp_consumer_dispatcher.c  amqp_consumer_dispatcher.h  amqp_decimal.c  amqp_decimal.h  amqp_envelope.c  amqp_envelope.h  amqp_envelope_exception.c  amqp_envelope_exception.h  amqp_exchange.c  amqp_exchange.h  amqp_methods_handling.c  amqp_methods_handling.h  amqp_object_store.c  amqp_object_store.h  amqp_queue.c  amqp_queue.h  (+27 more)
.github/: FUNDING.yml  dependabot.yml
appveyor/: build.ps1  install.ps1  package.ps1
debian/: README.Debian  amqp.ini  changelog  control  copyright  rules
examples/: consumer.php  consumer.php~  producer.php
provision/: .bashrc  install_rabbitmq-c.sh  provision.sh  rabbitmq.config
stubs/: AMQP.php  AMQPBasicProperties.php  AMQPChannel.php  AMQPChannelException.php  AMQPConnection.php  AMQPConnectionException.php  AMQPConsumer.php  AMQPConsumerDispatcher.php  AMQPConsumerException.php  AMQPDecimal.php  AMQPEnvelope.php  AMQPEnvelopeException.php  AMQPException.php  AMQPExchange.php  AMQPExchangeException.php  AMQPQueue.php  AMQPQueueException.php  AMQPTimestamp.php  AMQPValue.php  AMQPValueException.php  AMQTimestamp.php
tests/: 003-channel-consumers.phpt  (+206 more)
(+69 files in other folders)
